# mab-sim

./: .envrc  Makefile  README.md  pyproject.toml
notebooks/: Bayesian_Belief.ipynb  bayesian.py  sutton_barto.py
notebooks/bandits/: __init__.py  agent.py  bandit.py  environment.py  policy.py
src/: local_runner.py  local_runner_custom.py  local_runner_multi.py  simple_example.py
src/base/: agent.py  config_lib.py  environment.py  experiment.py  plot.py
src/finite_arm/: agent_finite.py  config_drift.py  config_misspecified.py  config_simple.py  config_simple_rand.py  config_simple_sanity.py  env_finite.py  test_config_simple.py
